--- a/JorkFoodSite/Client/Shared/ProductCard.razor.css
+++ b/JorkFoodSite/Client/Shared/ProductCard.razor.css
@@ -1,158 +1,46 @@
 ﻿#cards {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    max-width: 1250px;
-    width: calc(100% - 20px);
-}
-
-    #cards:hover > .card::after {
-        opacity: 1;
-    }
-
-.card-active > .card-content {
-    background-color: rgb(50, 50, 50) !important;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    margin: 1em auto;
+    max-width: 1400px;
+    gap: 1em;
 }
 
 .card {
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
+    background-color: var(--card-color);
+    padding: 1em;
+    border-radius: 1em;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    height: min-content;
     cursor: pointer;
-    display: flex;
-    height: 150px;
-    flex-direction: column;
-    position: relative;
-    width: 400px;
+    transition: background-color ease-out 275ms;
 }
 
-    .card:hover::before {
-        opacity: 1;
+    .card:hover:not(.card-active) {
+        background-color: rgb(40, 40, 40);
     }
 
-    .card::before,
-    .card::after {
-        border-radius: inherit;
-        content: "";
-        height: 100%;
-        left: 0px;
-        opacity: 0;
-        position: absolute;
-        top: 0px;
-        transition: opacity 500ms;
-        width: 100%;
-    }
-
-    .card::before {
-        background: radial-gradient( 800px circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.06), transparent 40% );
-        z-index: 1;
-    }
-
-    .card::after {
-        background: radial-gradient( 600px circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.4), transparent 40% );
-        z-index: -1;
-    }
-
-    .card > .card-content {
-        background-color: var(--card-color);
-        border-radius: inherit;
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        inset: 1px;
-        padding: 10px;
-        position: absolute;
-        transition: background-color linear 275ms;
-    }
-
-.card-image {
-    align-items: center;
-    display: flex;
-    height: 140px;
-    justify-content: center;
-    overflow: hidden;
+.card-active {
+    background-color: rgb(50, 50, 50) !important;
 }
 
-    .card-image > i {
-        font-size: 6em;
-        opacity: 0.25;
+@media(max-width: 1400px) {
+    #cards {
+        max-width: calc(100% - 1em);
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
-
-.card-info-wrapper {
-    align-items: center;
-    display: flex;
-    flex-grow: 1;
-    justify-content: flex-start;
-}
-
-.card-info {
-    align-items: flex-start;
-    display: flex;
-    gap: 10px;
-}
-
-    .card-info > i {
-        font-size: 1em;
-        height: 20px;
-        line-height: 20px;
-    }
-
-.card-info-title > h3 {
-    font-size: 1.1em;
-    line-height: 20px;
-}
-
-.card-info-title > h4 {
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 0.85em;
-    margin-top: 8px;
 }
 
 @media(max-width: 1000px) {
-    body {
-        align-items: flex-start;
-        overflow: auto;
-    }
-
     #cards {
-        max-width: 1000px;
-        padding: 10px 0px;
-    }
-
-    .card {
-        flex-shrink: 1;
-        width: calc(50% - 4px);
+        max-width: calc(100% - 1em);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 }
 
 @media(max-width: 500px) {
-    .card {
-        height: 180px;
-    }
-
-    .card-image {
-        height: 80px;
-    }
-
-        .card-image > i {
-            font-size: 3em;
-        }
-
-    .card-info > i {
-        font-size: 0.8em;
-    }
-
-    .card-info-title > h3 {
-        font-size: 0.9em;
-    }
-
-    .card-info-title > h4 {
-        font-size: 0.8em;
-        margin-top: 4px;
-    }
-}
-
-@media(max-width: 320px) {
-    .card {
-        width: 100%;
+    #cards {
+        max-width: calc(100% - 1em);
+        grid-template-columns: repeat(1, minmax(0, 1fr));
     }
 }
