--- a/JorkFoodSite/Client/Pages/Orders.razor
+++ b/JorkFoodSite/Client/Pages/Orders.razor
@@ -67,7 +67,7 @@
                                     }
                                 </div>
 
-                                @if (Constants.PersonName == "admin")
+                                @if (Constants.PersonName == "Админ")
                                 {
                                     <button class="card-end-btn" @onclick="() => MarkAsUnavailable(order)">Маркирай като изчерпано</button>
                                 }
