--- a/JorkFoodSite/Client/Shared/NavMenu.razor
+++ b/JorkFoodSite/Client/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
     <nav>
         <NavLink href="/home">Меню</NavLink>
         <NavLink href="/orders">Поръчки</NavLink>
-        @if (Constants.PersonName == "admin")
+        @if (Constants.PersonName == "Админ")
         {
             <NavLink href="/add">Добави</NavLink>
         }
