--- a/JorkFoodSite/Client/Shared/NavMenu.razor
+++ b/JorkFoodSite/Client/Shared/NavMenu.razor
@@ -5,6 +5,7 @@
         @if (Constants.PersonName == "Админ")
         {
             <NavLink href="/add">Добави</NavLink>
+            <NavLink href="/edit">Редактирай</NavLink>
         }
         <div class="dot"></div>
     </nav>
