--- a/JorkFoodSite/Client/Shared/MainLayout.razor
+++ b/JorkFoodSite/Client/Shared/MainLayout.razor
@@ -2,15 +2,19 @@
 
 @if (HasInitialized)
 {
-    <NavMenu />
+    <header class="header">
+        <NavMenu />
+    </header>
 
-    <main>
+    <main style="margin-top: 50px">
         @Body
     </main>
 }
 else
 {
-    <span>Сложи много смешна шега тука</span>
+    <div style="width: 100px; height: 100vh; overflow: hidden">
+        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus neque lorem, laoreet quis lacinia in, porttitor eget velit. Cras in velit est. Ut at vestibulum quam, eu cursus lectus. Pellentesque sit amet euismod nisl, et lacinia ex. Integer porttitor posuere tortor a bibendum. Sed consequat vulputate sagittis. Etiam maximus purus nec tortor mollis, sed ultrices est imperdiet. Ut et dui neque. Suspendisse eleifend convallis lectus id varius. In auctor nulla velit, at dapibus risus consequat nec. Maecenas eget vulputate ligula, et blandit odio. Maecenas auctor est diam, sed accumsan enim egestas eget. Donec vitae viverra dui. Vestibulum congue scelerisque quam, a commodo enim auctor mollis. Vestibulum eget commodo purus. Mauris erat tortor, egestas nec imperdiet at, suscipit et neque.</span>
+    </div>
 }
 
 @if (!PickedName)
@@ -20,22 +24,6 @@ else
             <label>Име</label>
             <input type="text" @bind-value="Name">
             <button @onclick="OnPickName">ОК</button>
-        </div>
-    </div>
-}
-
-@if (HasUnavailableOrder)
-{
-    <div class="name-dialog" @onclick="() => HasUnavailableOrder = false">
-        <div class="panel order-panel">
-            <h3>Следните поръчки са неналични:</h3>
-            <ul>
-                @foreach (var order in OrderNames)
-                {
-                    <li>@order</li>
-                }
-            </ul>
-            <button>ОК</button>
         </div>
     </div>
 }
