--- a/JorkFoodSite/Client/Shared/PersonOrders.razor.css
+++ b/JorkFoodSite/Client/Shared/PersonOrders.razor.css
@@ -1,8 +1,12 @@
 ﻿.person-orders-btn {
     position: fixed;
     display: inline-block;
-    top: 10px;
+    top: 0;
     right: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1em;
 }
 
 .close-button {
@@ -46,7 +50,7 @@
 
 .orders-content {
     display: grid;
-    grid-template-columns: 65% 10% 10% 10%;
+    grid-template-columns: calc(100% - 170px) 60px 20px 60px;
     column-gap: 10px;
     row-gap: 10px;
     margin-bottom: 20px;
@@ -61,9 +65,21 @@
         align-self: center;
     }
 
-.orders-price {
-    text-align: end;
-}
+    .orders-content button {
+        background-color: rgb(40, 40, 40);
+        outline: none;
+        border: 1px solid rgb(50, 50, 50);
+        padding: 4px 8px;
+        transition: background-color 100ms ease-in;
+    }
+
+        .orders-content button:hover {
+            background-color: rgb(50, 50, 50);
+        }
+
+    .orders-price {
+        text-align: end;
+    }
 
 @keyframes open-orders {
     from {
