--- a/JorkFoodSite/Client/wwwroot/css/app.css
+++ b/JorkFoodSite/Client/wwwroot/css/app.css
@@ -56,38 +56,61 @@ i {
         content: "An error has occurred."
     }
 
-.loading-progress {
-    position: relative;
-    display: block;
-    width: 8rem;
-    height: 8rem;
-    margin: 20vh auto 1rem auto;
+/* Loading start */
+
+.spinner-square {
+    display: flex;
+    flex-direction: row;
+    width: 90px;
+    height: 120px;
+    margin-top: calc(50vh - 60px);
 }
 
-    .loading-progress circle {
-        fill: none;
-        stroke: #e0e0e0;
-        stroke-width: 0.6rem;
-        transform-origin: 50% 50%;
-        transform: rotate(-90deg);
+    .spinner-square > .square {
+        width: 17px;
+        height: 80px;
+        margin: auto auto;
+        border-radius: 4px;
     }
 
-        .loading-progress circle:last-child {
-            stroke: #1b6ec2;
-            stroke-dasharray: calc(3.141 * var(--blazor-load-percentage, 0%) * 0.8), 500%;
-            transition: stroke-dasharray 0.05s ease-in-out;
-        }
-
-.loading-progress-text {
-    position: absolute;
-    text-align: center;
-    font-weight: bold;
-    inset: calc(20vh + 3.25rem) 0 auto 0.2rem;
+.square-1 {
+    animation: square-anim 1200ms cubic-bezier(0.445, 0.05, 0.55, 0.95) 0s infinite;
 }
 
-    .loading-progress-text:after {
-        content: var(--blazor-load-percentage-text, "Loading");
+.square-2 {
+    animation: square-anim 1200ms cubic-bezier(0.445, 0.05, 0.55, 0.95) 200ms infinite;
+}
+
+.square-3 {
+    animation: square-anim 1200ms cubic-bezier(0.445, 0.05, 0.55, 0.95) 400ms infinite;
+}
+
+@keyframes square-anim {
+    0% {
+        height: 100px;
+        background-color: rgb(66, 96, 141);
     }
+
+    20% {
+        height: 100px;
+    }
+
+    40% {
+        height: 140px;
+        background-color: rgb(66, 118, 141);
+    }
+
+    80% {
+        height: 100px;
+    }
+
+    100% {
+        height: 100px;
+        background-color: rgb(66, 96, 141);
+    }
+}
+
+/* Loading end */
 
 .fa-solid {
     font-size: 30px;
